--- a/register.html
+++ b/register.html
@@ -64,7 +64,7 @@
         });
 
         message.textContent = "✅ Registered successfully!";
-        window.location.href = "index.html";
+        window.location.href = "advice.html";
       } catch (err) {
         message.textContent = "❌ " + err.message;
       }
