--- a/register.html
+++ b/register.html
@@ -2,26 +2,30 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Register</title>
+  <title>Login</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div class="container">
-    <h2>Register</h2>
-    <input type="text" id="username" placeholder="Username" />
+    <h2>Login</h2>
     <input type="email" id="email" placeholder="Email" />
     <input type="password" id="password" placeholder="Password" />
-    <input type="file" id="profilePic" accept="image/*" />
-    <button id="registerBtn">Register</button>
+    <button id="loginBtn">Login</button>
     <p id="message"></p>
-    <p>Already have an account? <a href="login.html">Login</a></p>
+
+    <!-- Optional user preview -->
+    <div id="userPreview" style="display:none; text-align: center; margin-top: 20px;">
+      <img id="profileImage" src="" alt="Profile Image" style="width: 100px; height: 100px; border-radius: 50%; object-fit: cover;" />
+      <h3 id="profileUsername"></h3>
+    </div>
+
+    <p>Don't have an account? <a href="register.html">Register</a></p>
   </div>
 
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
-    import { getAuth, createUserWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js";
-    import { getFirestore, doc, setDoc } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
-    import { getStorage, ref, uploadBytes, getDownloadURL } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-storage.js";
+    import { getAuth, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js";
+    import { getFirestore, doc, getDoc } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
 
     const firebaseConfig = {
       apiKey: "AIzaSyBiNKDXds9IWjFAwSbJaNN8Zd37Wujk5Kc",
@@ -33,40 +37,35 @@
     const app = initializeApp(firebaseConfig);
     const auth = getAuth(app);
     const db = getFirestore(app);
-    const storage = getStorage(app);
 
-    document.getElementById("registerBtn").onclick = async () => {
-      const username = document.getElementById("username").value.trim();
-      const email = document.getElementById("email").value.trim();
+    const loginBtn = document.getElementById("loginBtn");
+    const message = document.getElementById("message");
+    const userPreview = document.getElementById("userPreview");
+    const profileImage = document.getElementById("profileImage");
+    const profileUsername = document.getElementById("profileUsername");
+
+    loginBtn.onclick = async () => {
+      const email = document.getElementById("email").value;
       const password = document.getElementById("password").value;
-      const profilePic = document.getElementById("profilePic").files[0];
-      const message = document.getElementById("message");
-
-      if (!username || !email || !password) {
-        message.textContent = "❌ Please fill in all fields.";
-        return;
-      }
 
       try {
-        const userCred = await createUserWithEmailAndPassword(auth, email, password);
-        let photoURL = "";
+        await signInWithEmailAndPassword(auth, email, password);
+        message.textContent = "✅ Logged in!";
 
-        if (profilePic) {
-          const storageRef = ref(storage, `profile_pics/${email}`);
-          await uploadBytes(storageRef, profilePic);
-          photoURL = await getDownloadURL(storageRef);
+        const userDoc = await getDoc(doc(db, "users", email));
+        if (userDoc.exists()) {
+          const data = userDoc.data();
+          profileUsername.textContent = "@" + (data.username || email);
+          profileImage.src = data.photoURL || "https://via.placeholder.com/100?text=No+Photo";
+          userPreview.style.display = "block";
         }
 
-        await setDoc(doc(db, "users", email), {
-          email,
-          username,
-          photoURL
-        });
-
-        message.textContent = "✅ Registered successfully!";
-        window.location.href = "advice.html";
-      } catch (err) {
-        message.textContent = "❌ " + err.message;
+        // Optional delay before redirect
+        setTimeout(() => {
+          window.location.href = "advice.html";
+        }, 2000);
+      } catch (error) {
+        message.textContent = "❌ " + error.message;
       }
     };
   </script>
