--- a/advice.html
+++ b/advice.html
@@ -45,7 +45,7 @@
     const auth = getAuth(app);
     const db = getFirestore(app);
 
-    const adminEmail = "admin@example.com"; // Replace with your admin email
+    const adminEmail = "wuhung0501@gmail.com"; // Replace with your admin email
 
     const userNameSpan = document.getElementById("userName");
     const adviceInput = document.getElementById("adviceInput");
