--- a/advice.html
+++ b/advice.html
@@ -32,7 +32,7 @@
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
     import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js";
-    import { getFirestore, collection, addDoc, getDocs, doc, updateDoc, deleteDoc, query, where, serverTimestamp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
+    import { getFirestore, collection, addDoc, onSnapshot, doc, updateDoc, deleteDoc, query, where, serverTimestamp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
 
     const firebaseConfig = {
       apiKey: "AIzaSyBiNKDXds9IWjFAwSbJaNN8Zd37Wujk5Kc",
@@ -68,11 +68,11 @@
       if (user.email === adminEmail) {
         adminPanel.style.display = "block";
         userPanel.style.display = "none";
-        loadAllAdvice();
+        watchAllAdvice();
       } else {
         adminPanel.style.display = "none";
         userPanel.style.display = "block";
-        loadUserAdvice();
+        watchUserAdvice();
       }
     });
 
@@ -94,92 +94,65 @@
         });
         statusText.textContent = "✅ Advice submitted!";
         adviceInput.value = "";
-        loadUserAdvice();
       } catch (e) {
         statusText.textContent = "❌ Failed to submit.";
       }
     };
 
-    async function loadAllAdvice() {
+    function watchAllAdvice() {
       const q = query(collection(db, "advices"));
-      const snapshot = await getDocs(q);
-      adminAdviceList.innerHTML = "";
-
-      snapshot.forEach(docSnap => {
-        const data = docSnap.data();
-        const div = document.createElement("div");
-        div.classList.add("feedback-item");
-
-        const messages = (data.thread || []).map(m => `<p><strong>${m.sender}:</strong> ${m.message}</p>`).join("");
-
-        div.innerHTML = `
-          <strong>${data.userEmail}</strong><br>
-          ${messages}
-          <textarea placeholder="Reply..."></textarea>
-          <button class="reply">Send Reply</button>
-          <button class="delete" style="margin-left: 10px;">Delete Advice</button>
-        `;
-
-        const replyBtn = div.querySelector(".reply");
-        const deleteBtn = div.querySelector(".delete");
-        const replyInput = div.querySelector("textarea");
-
-        replyBtn.onclick = async () => {
-          const newReply = {
-            sender: "admin",
-            message: replyInput.value.trim(),
-            timestamp: new Date().toISOString()
-          };
-          const updatedThread = [...(data.thread || []), newReply];
-          await updateDoc(doc(db, "advices", docSnap.id), { thread: updatedThread });
-          loadAllAdvice();
-        };
-
-        deleteBtn.onclick = async () => {
-          if (confirm("Are you sure you want to delete this advice?")) {
-            await deleteDoc(doc(db, "advices", docSnap.id));
-            loadAllAdvice();
-          }
-        };
-
-        adminAdviceList.appendChild(div);
+      onSnapshot(q, (snapshot) => {
+        adminAdviceList.innerHTML = "";
+        snapshot.forEach(docSnap => renderAdvice(docSnap, true));
       });
     }
 
-    async function loadUserAdvice() {
+    function watchUserAdvice() {
       const q = query(collection(db, "advices"), where("userEmail", "==", currentUser.email));
-      const snapshot = await getDocs(q);
-      userAdviceList.innerHTML = "";
-
-      snapshot.forEach(docSnap => {
-        const data = docSnap.data();
-        const div = document.createElement("div");
-        div.classList.add("feedback-item");
-
-        const messages = (data.thread || []).map(m => `<p><strong>${m.sender}:</strong> ${m.message}</p>`).join("");
-
-        div.innerHTML = `
-          ${messages}
-          <textarea placeholder="Reply..."></textarea>
-          <button>Reply</button>
-        `;
-
-        const replyBtn = div.querySelector("button");
-        const replyInput = div.querySelector("textarea");
-
-        replyBtn.onclick = async () => {
-          const newReply = {
-            sender: "user",
-            message: replyInput.value.trim(),
-            timestamp: new Date().toISOString()
-          };
-          const updatedThread = [...(data.thread || []), newReply];
-          await updateDoc(doc(db, "advices", docSnap.id), { thread: updatedThread });
-          loadUserAdvice();
-        };
-
-        userAdviceList.appendChild(div);
+      onSnapshot(q, (snapshot) => {
+        userAdviceList.innerHTML = "";
+        snapshot.forEach(docSnap => renderAdvice(docSnap, false));
       });
+    }
+
+    function renderAdvice(docSnap, isAdmin) {
+      const data = docSnap.data();
+      const container = document.createElement("div");
+      container.classList.add("feedback-item");
+      const messages = (data.thread || []).map(m => `<p><strong>${m.sender}:</strong> ${m.message}</p>`).join("");
+
+      container.innerHTML = `
+        ${isAdmin ? `<strong>${data.userEmail}</strong><br>` : ""}
+        ${messages}
+        <textarea placeholder="Reply..."></textarea>
+        <button class="reply">${isAdmin ? "Send Reply" : "Reply"}</button>
+        ${isAdmin ? `<button class="delete" style="margin-left: 10px;">Delete Advice</button>` : ""}
+      `;
+
+      const replyBtn = container.querySelector(".reply");
+      const replyInput = container.querySelector("textarea");
+
+      replyBtn.onclick = async () => {
+        const newReply = {
+          sender: isAdmin ? "admin" : "user",
+          message: replyInput.value.trim(),
+          timestamp: new Date().toISOString()
+        };
+        const updatedThread = [...(data.thread || []), newReply];
+        await updateDoc(doc(db, "advices", docSnap.id), { thread: updatedThread });
+      };
+
+      if (isAdmin) {
+        const deleteBtn = container.querySelector(".delete");
+        deleteBtn.onclick = async () => {
+          if (confirm("Are you sure you want to delete this advice?")) {
+            await deleteDoc(doc(db, "advices", docSnap.id));
+          }
+        };
+        adminAdviceList.appendChild(container);
+      } else {
+        userAdviceList.appendChild(container);
+      }
     }
 
     logoutBtn.onclick = () => signOut(auth);
