--- a/advice.html
+++ b/advice.html
@@ -6,6 +6,11 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <div class="terminal-startup">Booting Advice System<span class="cursor">_</span></div>
+<script>
+  const startup = document.querySelector('.terminal-startup');
+  setTimeout(() => startup.style.display = 'none', 3000);
+</script>
   <div class="container">
     <h2>Welcome, <span id="userName"></span>!</h2>
 
