--- a/advice.html
+++ b/advice.html
@@ -6,56 +6,20 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <script>
-  document.addEventListener("DOMContentLoaded", () => {
-    const container = document.querySelector(".container");
-    const startup = document.createElement("div");
-    startup.className = "terminal-startup";
-    document.body.insertBefore(startup, container);
+  <div class="terminal-startup" id="terminalStartup"></div>
 
-    const text = "Booting Advice System...";
-    let i = 0;
-    const cursor = document.createElement("span");
-    cursor.className = "cursor";
-    cursor.textContent = "_";
-
-    function typeNext() {
-      if (i < text.length) {
-        startup.textContent += text[i];
-        i++;
-        setTimeout(typeNext, 75);
-      } else {
-        startup.appendChild(cursor);
-        setTimeout(() => {
-          startup.remove();
-          container.style.display = "block";
-        }, 1000);
-      }
-    }
-
-    typeNext();
-  });
-</script>
-  <div class="terminal-startup">Booting Advice System<span class="cursor">_</span></div>
-<script>
-  const startup = document.querySelector('.terminal-startup');
-  setTimeout(() => startup.style.display = 'none', 3000);
-</script>
   <div class="container">
     <h2>Welcome, <span id="userName"></span>!</h2>
 
-    <!-- Advice Submission -->
     <textarea id="adviceInput" placeholder="Enter your advice or concern..."></textarea>
     <button id="submitAdvice">Submit Advice</button>
     <p id="status"></p>
 
-    <!-- Admin View -->
     <div id="adminPanel" style="display:none;">
       <h3>All Conversations</h3>
       <div id="adminAdviceList"></div>
     </div>
 
-    <!-- User View -->
     <div id="userPanel">
       <h3>Your Conversation</h3>
       <div id="userAdviceList"></div>
@@ -80,7 +44,7 @@
     const auth = getAuth(app);
     const db = getFirestore(app);
 
-    const adminEmail = "wuhung0501@gmail.com"; // replace with your actual admin email
+    const adminEmail = "wuhung0501@gmail.com";
 
     const userNameSpan = document.getElementById("userName");
     const adviceInput = document.getElementById("adviceInput");
@@ -118,13 +82,7 @@
       try {
         await addDoc(collection(db, "advices"), {
           userEmail: currentUser.email,
-          thread: [
-            {
-              sender: "user",
-              message,
-              timestamp: new Date().toISOString()
-            }
-          ],
+          thread: [{ sender: "user", message, timestamp: new Date().toISOString() }],
           timestamp: serverTimestamp()
         });
         statusText.textContent = "✅ Advice submitted!";
@@ -191,6 +149,29 @@
     }
 
     logoutBtn.onclick = () => signOut(auth);
+  </script>
+
+  <script>
+    const bootText = "Booting Advice System...";
+    const startupDiv = document.getElementById("terminalStartup");
+    const container = document.querySelector(".container");
+
+    container.style.display = "none";
+
+    let i = 0;
+    function typeBoot() {
+      if (i < bootText.length) {
+        startupDiv.innerHTML = bootText.slice(0, i + 1) + '<span class="cursor">_</span>';
+        i++;
+        setTimeout(typeBoot, 75);
+      } else {
+        setTimeout(() => {
+          startupDiv.remove();
+          container.style.display = "block";
+        }, 1000);
+      }
+    }
+    typeBoot();
   </script>
 </body>
 </html>
