--- a/advice.html
+++ b/advice.html
@@ -169,7 +169,7 @@
       } else {
         setTimeout(() => {
           startupDiv.remove();
-          appContainer.classList.remove("hidden"); // ✅ shows main app
+          appContainer.classList.remove("hidden");
         }, 800);
       }
     }
