--- a/advice.html
+++ b/advice.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Advice System</title>
-  <audio id="bootSound" src="boot.mp3" preload="auto"></audio>
+  <audio id="bootSound" src="boot.mp3" preload="loop"></audio>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
