--- a/advice.html
+++ b/advice.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <title>Advice System</title>
   <link rel="stylesheet" href="style.css" />
-  <audio id="bootSound" src="boot.mp3" preload="auto" auto></audio>
+  <audio id="bootSound" src="boot.mp3" preload="auto" loop></audio>
 </head>
 <body>
   <!-- Boot animation screen -->
